src/scss/components/_sidebar.scss
.sidebar {
  background-color: $react-timelines-sidebar-background-color;
  box-shadow: 10px 0 10px -5px rgba(12, 12, 12, 0.1);
}

.sidebar__header {
  background-color: $react-timelines-sidebar-background-color;
}

.sidebar__header.is-sticky {
  position: fixed;
  top: 0;
  z-index: 1;
  direction: rtl;
  margin-left: ($react-timelines-sidebar-width - $react-timelines-sidebar-closed-offset);

  @media (min-width: $react-timelines-auto-open-breakpoint) {
    margin-left: 0;
    direction: ltr;
  }
}

.layout.is-open .sidebar__header.is-sticky {
  margin-left: 0;
  direction: ltr;
}

.sidebar__body {}

